--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@ ccccckkc<!DOCTYPE html>
   <meta charset="UTF-8">
   <title>Desmond's Classwork</title>
   <!-- Link to external CSS -->
-  <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+ <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
   <div class="title">Desmond's Classwork</div>
