--- a/base.html
+++ b/base.html
@@ -22,7 +22,8 @@
   <meta charset="UTF-8">
   <title>Desmond's ClassWork</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
+  <link rel="stylesheet" href="style.css">
+
 </head>
 
 <body>
