--- a/register.html
+++ b/register.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Register - Desmond's Classwork</title>
-  <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+  <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
   <div class="site-header">Desmond's Classwork</div>
