--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@ ccccckkc<!DOCTYPE html>
   </div>
 
   <div class="add-options button-group">
-    <a href="/login"><button>Login</button></a>
-    <a href="/register"><button>Register</button></a>
+    <a href="login.html"><button>Login</button></a>
+    <a href="register.html"><button>Register</button></a>
   </div>
 
   <footer>
