--- a/login.html
+++ b/login.html
@@ -21,7 +21,7 @@
       <button type="submit">Login</button>
     </form>
     <div class="bottom-links">
-      <a href="{{ url_for('register') }}">Register</a> |
+      <a href="register.html">Register</a> |
       <a href="#">Forgot Password?</a>
     </div>
   </div>
