--- a/register.html
+++ b/register.html
@@ -24,7 +24,7 @@
       <button type="submit">Register</button>
     </form>
     <div class="bottom-links">
-      <a href="{{ url_for('login') }}">Already have an account? Login</a>
+      <a href="login.html">Already have an account? Login</a>
     </div>
   </div>
 </body>
